<resources>
    <string name="app_name">Android-Academy-HW</string>
    <string name="back">Back</string>
    <string name="adult">18+</string>
    <string name="avengers_title">Avengers: End Game</string>
    <string name="avengers_genre">Action, Adventure, Fantasy</string>
    <string name="reviews">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_avengers">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="running_time">137 min</string>
</resources>